--- a/plugin.xml
+++ b/plugin.xml
@@ -3,10 +3,10 @@
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
            id="cordova-plugin-sumup"
       version="1.0.0">
-    <name>Sumup</name>
+    <name>SumUp</name>
     <author>nuvoPoint</author>
     <description>
-        Cordova plugin for integration with sumup sdk
+        Cordova plugin for integration with SumUp SDK
     </description>
     <license>MIT</license>
     <repo>https://github.com/nuvoPoint/cordova-plugin-sumup.git</repo>
@@ -16,21 +16,21 @@
     </keywords>
 
     <js-module src="www/sumup.js" name="sumup">
-        <clobbers target="cordova.plugins.sumup" />
+        <clobbers target="SumUp" />
     </js-module>
 
     <!-- android -->
     <platform name="android">
         <preference name="SUMUP_API_KEY" />
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Sumup" >
-                <param name="android-package" value="com.nuvopoint.cordova.Sumup" />
+            <feature name="SumUp" >
+                <param name="android-package" value="com.nuvopoint.cordova.SumUp" />
             </feature>
         </config-file>
         <config-file target="./res/values/strings.xml" parent="/resources">
             <string name="SUMUP_API_KEY">$SUMUP_API_KEY</string>
         </config-file>
-        <source-file src="src/android/Sumup.java" target-dir="src/com/nuvopoint/cordova" />
+        <source-file src="src/android/SumUp.java" target-dir="src/com/nuvopoint/cordova" />
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.INTERNET" />
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -42,8 +42,8 @@
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="Sumup">
-                <param name="ios-package" value="CDVSumup"/>
+            <feature name="SumUp">
+                <param name="ios-package" value="CDVSumUp"/>
             </feature>
         </config-file>
 
@@ -65,8 +65,8 @@
         <config-file target="*-Info.plist" parent="SUMUP_API_KEY">
             <string>$SUMUP_API_KEY</string>
         </config-file>
-        <header-file src="src/ios/CDVSumup.h" />
-        <source-file src="src/ios/CDVSumup.m" />
+        <header-file src="src/ios/CDVSumUp.h" />
+        <source-file src="src/ios/CDVSumUp.m" />
         <preference name="SUMUP_API_KEY" />
         <framework src="SumUpSDK" type="podspec" spec="~> 3.0.0" />
     </platform>
