--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -26,7 +26,7 @@ android {
     buildToolsVersion "27.0.3"
 
     defaultConfig {
-        applicationId "com.nuvopoint.cordova.sumup"
+        applicationId "com.nuvopoint.cordova.SumUp"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
@@ -49,16 +49,6 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
-
-/*
-    buildTypes {
-        debug {
-            // All ProGuard rules required by the SumUp SDK are packaged with the library
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt')
-        }
-    }
-    */
 }
 
 dependencies {
