fix: android gradle and sumup extras

--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -49,6 +49,11 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
